# Self.Service.Agents

./: .gitignore  ReadMe.md  llm-tests.ipynb  requirements.txt
crewai_agents/: README.md  pyproject.toml  requirements.txt  template.md
crewai_agents/src/crewai_agents/: crew.py  main.py
crewai_agents/src/crewai_agents/config/: agents.yaml  tasks.yaml
crewai_agents/src/crewai_agents/tools/: calculation_tool.py  docker-compose.yml  rag_tool.py  vector_store_tool.py
llamaindex/: pyproject.toml  ui.py
llamaindex/datastore/platform_wikis/: README.md
llamaindex/datastore/platform_wikis/docs/azure/: networking_notes.md
llamaindex/datastore/platform_wikis/docs/data_vault/: overview.md
llamaindex/datastore/platform_wikis/docs/databricks/: unity_catalog.md
llamaindex/datastore/platform_wikis/enrich/release/: Create Enrichment Node Release Pipeline.md
llamaindex/datastore/platform_wikis/ingest/release/: Create DBT Ingestion Node Release Pipeline.md  Create SnowSQL CLI Ingestion Node Release Pipeline.md
llamaindex/datastore/platform_wikis/provision/: terraform_cloud_workflow.md
llamaindex/datastore/platform_wikis/provision/example_tfvars/: environment.tfvars  fastapi-app-service.tfvars  frontend-app-service.tfvars
llamaindex/datastore/platform_wikis/provision/toms_terraform_notes/: README.md  backends.md  cli.md  data_sources.md  modules.md  provisioners.md  resources.md  syntax.md  variables.md
llamaindex/src/: app.py  gemini_react_agent.py  local.app.py  openai_react_agent.py
llamaindex/tools/: calculation_tool.py  rag_tool.py
(+112 files in other folders)
