[tool.poetry]
name = "crewai_agents"
version = "0.1.0"
description = "crewai_agents using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
crewai = { extras = ["tools"], version = ">=0.63.6,<1.0.0" }
llama-index-postprocessor-rankgpt-rerank = ">=0.2.0"
llama-index-vector-stores-qdrant = ">=0.3.0"
llama-index-core = ">=0.11.14"
llama-index = "0.11.14"

[tool.poetry.scripts]
crewai_agents = "crewai_agents.main:run"
run_crew = "crewai_agents.main:run"
train = "crewai_agents.main:train"
replay = "crewai_agents.main:replay"
test = "crewai_agents.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
